--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -42,6 +42,7 @@
 }
 
 \newcommand{\half}{\frac{1}{2}}
+\newcommand{\oneover}[1]{\frac{1}{#1}}
 
 % *-------------------*
 % | *** Utilities *** |
@@ -177,6 +178,6 @@
 % | *** Equation *** |
 % *-------------------*
 
-\numberwithin{equation}{subsection}
+\numberwithin{equation}{tcb@cnt@theorem}
 
 \endinput
