Add a little title

--- a/statistics.tex
+++ b/statistics.tex
@@ -260,6 +260,8 @@ Since $\norm{T - g(\theta)}$ is a random variable we can consider the one more c
 
 We say that an estimator is \emph{biased} if it's expectation is not centered around $g(\theta)$.
 
+\subsection{Maximum likelihood estimator}
+
 \begin{definition}{Likelihood function}{likelihood-function}
     Let $X$ be a random vector with pdf $p_0$ that depends on a parameter $\theta \in \Theta$.
     For a fixed $x$ the likelihood function is defined as
